Fix overlapping issue in nav.

--- a/src/app/shared/header/header.component.scss
+++ b/src/app/shared/header/header.component.scss
@@ -10,7 +10,7 @@
         button {
             background: #FFF;
             color: #222 !important;
-            z-index: 2;
+            z-index: 4;
             position: relative;
 
             /deep/ {
@@ -84,7 +84,7 @@
         padding: 10px 15px;
         position: absolute;
         width: 100%;
-        z-index: 1;
+        z-index: 3;
         box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
 
         a {
